# librsu

./: Readme.md
platform/freertos/: CMakeLists.txt  toolchain.cmake
platform/freertos_aarch64/: CMakeLists.txt  aarch64-none-elf-gcc.cmake  toolchain.cmake
platform/freertos_aarch64/dependency/: CMakeLists.txt  rsu_crc32.c  rsu_crc32_def.c  rsu_file_ops.c  rsu_mailbox_ops.c  rsu_misc_ops.c  rsu_qspi_ops.c
platform/freertos_aarch64/dependency/freeRTOS/: CMakeLists.txt  RSU_logging_freeRTOS.c  RSU_osal_freeRTOS.c
platform/freertos_aarch64/dependency/freeRTOS/include/: RSU_OSAL_types.h  RSU_crc32_def.h  RSU_logging.h
platform/platform_include/utils/: RSU_logging.h
src/: CMakeLists.txt  libRSU_misc.c
